fix: layout bug when River paras are next to sidebars
Refs: HRINFO-1205

--- a/html/themes/custom/common_design_subtheme/components/hri-river/hri-river.css
+++ b/html/themes/custom/common_design_subtheme/components/hri-river/hri-river.css
@@ -1,8 +1,7 @@
 /**
  * HR.info River
  */
-
-.hri-river {
+.hri-river--with-filters {
   display: flex;
   flex-flow: row wrap;
   gap: 1rem;
